// =====================================================================
//  NEXA · Sistema Integral de Administración Edificio XYZ
//  Esquema Prisma compartido por los módulos del backend (monorepo)
//  Prisma 6 + PostgreSQL · modelos PascalCase → tablas snake_case
//
//  Propietarios por módulo:
//    Seguridad (auth)         → Usuario                       [Diego]
//    Copropietarios           → Copropietario, Unidad, Ocupacion [Diego]
//    Personal                 → Empleado                      [Diego]
//    Financiero               → todo lo demás                 [Juan Luis]
// =====================================================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// =====================================================================
// ENUMS
// =====================================================================

enum RolUsuario {
  ADMINISTRADOR
  DIRECTORIO
  CONSULTA
}

enum TipoCopropietario {
  PROPIETARIO
  INQUILINO
}

enum TipoUnidad {
  DEPARTAMENTO
  PARQUEO
  BAULERA
}

enum MetodoMora {
  SIMPLE
  COMPUESTO
}

enum EstadoPeriodo {
  ABIERTO
  CERRADO
}

enum EstadoExpensa {
  PENDIENTE
  PARCIAL
  PAGADA
  VENCIDA
}

enum TipoCuenta {
  CAJA
  BANCO
}

enum TipoMovimiento {
  INGRESO
  EGRESO
}

enum OrigenMovimiento {
  PAGO
  INGRESO
  EGRESO
  NOMINA
  AJUSTE
}

enum EstadoConciliacion {
  ABIERTA
  CERRADA
}

enum MetodoPago {
  EFECTIVO
  TRANSFERENCIA
  QR
}

enum AplicacionPago {
  CAPITAL
  MORA
}

enum EstadoAnticipo {
  DISPONIBLE
  APLICADO
}

enum TipoCategoria {
  INGRESO
  EGRESO
}

enum TipoConceptoPlanilla {
  BONO
  DESCUENTO
  ANTICIPO
}

enum EstadoPlanilla {
  BORRADOR
  PAGADA
}

// ---- Contabilidad ----
enum TipoCuentaContable {
  ACTIVO
  PASIVO
  PATRIMONIO
  INGRESO
  GASTO
}

enum NaturalezaCuenta {
  DEUDORA
  ACREEDORA
}

enum OrigenAsiento {
  EMISION_EXPENSAS
  PAGO
  INGRESO
  EGRESO
  NOMINA
  AJUSTE
  MANUAL
}

enum EstadoAsiento {
  REGISTRADO
  ANULADO
}

// =====================================================================
// REFERENCIA: seguridad y copropietarios (otros módulos)
// =====================================================================

model Usuario {
  id           Int        @id @default(autoincrement())
  username     String     @unique @map("nombre_usuario") @db.VarChar(50)
  nombre       String     @db.VarChar(100)
  email        String     @unique @db.VarChar(150)
  passwordHash String     @map("password_hash") @db.VarChar(255)
  rol          RolUsuario @default(CONSULTA)
  activo       Boolean    @default(true)
  ultimoAcceso DateTime?  @map("ultimo_acceso")
  creadoEn     DateTime   @default(now()) @map("creado_en")

  configuracionesMora ConfiguracionMora[]
  movimientos         Movimiento[]
  conciliaciones      Conciliacion[]
  pagos               Pago[]
  ingresos            Ingreso[]
  egresos             Egreso[]
  planillas           Planilla[]
  asientos            Asiento[]

  @@map("usuario")
}

model Copropietario {
  id        Int               @id @default(autoincrement())
  nombres   String            @db.VarChar(100)
  apellidos String            @db.VarChar(100)
  ci        String?           @unique @db.VarChar(20)
  telefono  String?           @db.VarChar(30)
  email     String?           @db.VarChar(150)
  tipo      TipoCopropietario
  activo    Boolean           @default(true)

  ocupaciones Ocupacion[]
  pagos       Pago[]

  @@map("copropietario")
}

model Unidad {
  id           Int        @id @default(autoincrement())
  codigo       String     @unique @db.VarChar(20)
  tipo         TipoUnidad
  piso         Int?
  superficieM2 Decimal?   @map("superficie_m2") @db.Decimal(8, 2)
  coeficiente  Decimal?   @db.Decimal(6, 4)
  activo       Boolean    @default(true)

  ocupaciones Ocupacion[]
  expensas    Expensa[]
  pagos       Pago[]
  anticipos   Anticipo[]

  @@map("unidad")
}

model Ocupacion {
  id                Int       @id @default(autoincrement())
  unidadId          Int       @map("unidad_id")
  copropietarioId   Int       @map("copropietario_id")
  fechaInicio       DateTime  @map("fecha_inicio") @db.Date
  fechaFin          DateTime? @map("fecha_fin") @db.Date
  esResponsablePago Boolean   @default(true) @map("es_responsable_pago")

  unidad        Unidad        @relation(fields: [unidadId], references: [id])
  copropietario Copropietario @relation(fields: [copropietarioId], references: [id])

  @@index([unidadId])
  @@map("ocupacion")
}

// =====================================================================
// EXPENSAS (req. 2)
// =====================================================================

model ConfiguracionMora {
  id             Int        @id @default(autoincrement())
  tasaMensual    Decimal    @map("tasa_mensual") @db.Decimal(5, 2)
  diasGracia     Int        @default(0) @map("dias_gracia")
  diaVencimiento Int        @default(10) @map("dia_vencimiento")
  metodo         MetodoMora @default(SIMPLE)
  vigenteDesde   DateTime   @map("vigente_desde") @db.Date
  vigenteHasta   DateTime?  @map("vigente_hasta") @db.Date
  creadoPorId    Int?       @map("creado_por_id")

  creadoPor Usuario? @relation(fields: [creadoPorId], references: [id])

  @@map("configuracion_mora")
}

model Periodo {
  id               Int           @id @default(autoincrement())
  anio             Int
  mes              Int
  montoBase        Decimal       @map("monto_base") @db.Decimal(12, 2)
  fechaEmision     DateTime      @map("fecha_emision") @db.Date
  fechaVencimiento DateTime      @map("fecha_vencimiento") @db.Date
  estado           EstadoPeriodo @default(ABIERTO)

  expensas Expensa[]

  @@unique([anio, mes])
  @@map("periodo")
}

model Expensa {
  id               Int           @id @default(autoincrement())
  unidadId         Int           @map("unidad_id")
  periodoId        Int           @map("periodo_id")
  monto            Decimal       @db.Decimal(12, 2)
  moraAcumulada    Decimal       @default(0) @map("mora_acumulada") @db.Decimal(12, 2)
  saldoPendiente   Decimal       @map("saldo_pendiente") @db.Decimal(12, 2)
  fechaVencimiento DateTime      @map("fecha_vencimiento") @db.Date
  estado           EstadoExpensa @default(PENDIENTE)
  creadoEn         DateTime      @default(now()) @map("creado_en")

  unidad   Unidad        @relation(fields: [unidadId], references: [id])
  periodo  Periodo       @relation(fields: [periodoId], references: [id])
  detalles PagoDetalle[]

  @@unique([unidadId, periodoId])
  @@index([estado])
  @@index([fechaVencimiento])
  @@map("expensa")
}

// =====================================================================
// CAJA Y BANCOS (req. 4)
// =====================================================================

model Cuenta {
  id           Int        @id @default(autoincrement())
  nombre       String     @db.VarChar(100)
  tipo         TipoCuenta
  banco        String?    @db.VarChar(100)
  nroCuenta    String?    @map("nro_cuenta") @db.VarChar(50)
  saldoInicial Decimal    @default(0) @map("saldo_inicial") @db.Decimal(12, 2)
  saldoActual  Decimal    @default(0) @map("saldo_actual") @db.Decimal(12, 2)
  activa       Boolean    @default(true)
  cuentaContableId Int?   @map("cuenta_contable_id")

  cuentaContable CuentaContable? @relation(fields: [cuentaContableId], references: [id])
  movimientos    Movimiento[]
  conciliaciones Conciliacion[]
  pagos          Pago[]
  ingresos       Ingreso[]
  egresos        Egreso[]
  planillas      Planilla[]

  @@map("cuenta")
}

model Conciliacion {
  id           Int                @id @default(autoincrement())
  cuentaId     Int                @map("cuenta_id")
  fechaInicio  DateTime           @map("fecha_inicio") @db.Date
  fechaFin     DateTime           @map("fecha_fin") @db.Date
  saldoBanco   Decimal            @map("saldo_banco") @db.Decimal(12, 2)
  saldoSistema Decimal            @map("saldo_sistema") @db.Decimal(12, 2)
  diferencia   Decimal            @db.Decimal(12, 2)
  estado       EstadoConciliacion @default(ABIERTA)
  observacion  String?            @db.VarChar(255)
  usuarioId    Int?               @map("usuario_id")
  creadoEn     DateTime           @default(now()) @map("creado_en")

  cuenta      Cuenta       @relation(fields: [cuentaId], references: [id])
  usuario     Usuario?     @relation(fields: [usuarioId], references: [id])
  movimientos Movimiento[]

  @@map("conciliacion")
}

/// Libro mayor: todo pago, ingreso, egreso o planilla genera exactamente un movimiento.
model Movimiento {
  id              Int              @id @default(autoincrement())
  cuentaId        Int              @map("cuenta_id")
  fecha           DateTime         @default(now())
  tipo            TipoMovimiento
  monto           Decimal          @db.Decimal(12, 2)
  saldoResultante Decimal          @map("saldo_resultante") @db.Decimal(12, 2)
  origenTipo      OrigenMovimiento @map("origen_tipo")
  descripcion     String?          @db.VarChar(255)
  conciliado      Boolean          @default(false)
  conciliacionId  Int?             @map("conciliacion_id")
  usuarioId       Int?             @map("usuario_id")

  cuenta       Cuenta        @relation(fields: [cuentaId], references: [id])
  conciliacion Conciliacion? @relation(fields: [conciliacionId], references: [id])
  usuario      Usuario?      @relation(fields: [usuarioId], references: [id])

  // Documento que originó el movimiento (1 a 1)
  pago     Pago?
  ingreso  Ingreso?
  egreso   Egreso?
  planilla Planilla?

  @@index([cuentaId, fecha])
  @@map("movimiento")
}

// =====================================================================
// PAGOS DE EXPENSAS (req. 2)
// =====================================================================

model Pago {
  id              Int        @id @default(autoincrement())
  unidadId        Int        @map("unidad_id")
  copropietarioId Int?       @map("copropietario_id")
  cuentaId        Int        @map("cuenta_id")
  movimientoId    Int?       @unique @map("movimiento_id")
  fecha           DateTime   @default(now())
  monto           Decimal    @db.Decimal(12, 2)
  metodo          MetodoPago
  referencia      String?    @db.VarChar(100)
  comprobanteUrl  String?    @map("comprobante_url") @db.VarChar(255)
  observacion     String?    @db.VarChar(255)
  anulado         Boolean    @default(false)
  usuarioId       Int?       @map("usuario_id")
  creadoEn        DateTime   @default(now()) @map("creado_en")

  unidad        Unidad         @relation(fields: [unidadId], references: [id])
  copropietario Copropietario? @relation(fields: [copropietarioId], references: [id])
  cuenta        Cuenta         @relation(fields: [cuentaId], references: [id])
  movimiento    Movimiento?    @relation(fields: [movimientoId], references: [id])
  usuario       Usuario?       @relation(fields: [usuarioId], references: [id])
  detalles      PagoDetalle[]
  anticipos     Anticipo[]

  @@index([unidadId, fecha])
  @@map("pago")
}

/// Un pago puede cubrir varias expensas o parte de una.
model PagoDetalle {
  id            Int            @id @default(autoincrement())
  pagoId        Int            @map("pago_id")
  expensaId     Int            @map("expensa_id")
  montoAplicado Decimal        @map("monto_aplicado") @db.Decimal(12, 2)
  aplicadoA     AplicacionPago @default(CAPITAL) @map("aplicado_a")

  pago    Pago    @relation(fields: [pagoId], references: [id], onDelete: Cascade)
  expensa Expensa @relation(fields: [expensaId], references: [id])

  @@index([expensaId])
  @@map("pago_detalle")
}

/// Pagos anticipados: saldo a favor de la unidad.
model Anticipo {
  id              Int            @id @default(autoincrement())
  unidadId        Int            @map("unidad_id")
  pagoId          Int            @map("pago_id")
  monto           Decimal        @db.Decimal(12, 2)
  saldoDisponible Decimal        @map("saldo_disponible") @db.Decimal(12, 2)
  estado          EstadoAnticipo @default(DISPONIBLE)
  creadoEn        DateTime       @default(now()) @map("creado_en")

  unidad Unidad @relation(fields: [unidadId], references: [id])
  pago   Pago   @relation(fields: [pagoId], references: [id])

  @@map("anticipo")
}

// =====================================================================
// INGRESOS Y EGRESOS (req. 3)
// =====================================================================

model Categoria {
  id          Int           @id @default(autoincrement())
  nombre      String        @db.VarChar(100)
  tipo        TipoCategoria
  descripcion String?       @db.VarChar(255)
  activa      Boolean       @default(true)
  cuentaContableId Int?     @map("cuenta_contable_id")

  cuentaContable CuentaContable? @relation(fields: [cuentaContableId], references: [id])
  ingresos Ingreso[]
  egresos  Egreso[]

  @@unique([nombre, tipo])
  @@map("categoria")
}

model Ingreso {
  id             Int      @id @default(autoincrement())
  categoriaId    Int      @map("categoria_id")
  cuentaId       Int      @map("cuenta_id")
  movimientoId   Int?     @unique @map("movimiento_id")
  fecha          DateTime @db.Date
  monto          Decimal  @db.Decimal(12, 2)
  descripcion    String   @db.VarChar(255)
  comprobanteUrl String?  @map("comprobante_url") @db.VarChar(255)
  usuarioId      Int?     @map("usuario_id")
  creadoEn       DateTime @default(now()) @map("creado_en")

  categoria  Categoria   @relation(fields: [categoriaId], references: [id])
  cuenta     Cuenta      @relation(fields: [cuentaId], references: [id])
  movimiento Movimiento? @relation(fields: [movimientoId], references: [id])
  usuario    Usuario?    @relation(fields: [usuarioId], references: [id])

  @@index([fecha])
  @@map("ingreso")
}

model Egreso {
  id             Int      @id @default(autoincrement())
  categoriaId    Int      @map("categoria_id")
  cuentaId       Int      @map("cuenta_id")
  movimientoId   Int?     @unique @map("movimiento_id")
  fecha          DateTime @db.Date
  monto          Decimal  @db.Decimal(12, 2)
  proveedor      String?  @db.VarChar(150)
  nroFactura     String?  @map("nro_factura") @db.VarChar(50)
  descripcion    String   @db.VarChar(255)
  comprobanteUrl String?  @map("comprobante_url") @db.VarChar(255)
  usuarioId      Int?     @map("usuario_id")
  creadoEn       DateTime @default(now()) @map("creado_en")

  categoria  Categoria   @relation(fields: [categoriaId], references: [id])
  cuenta     Cuenta      @relation(fields: [cuentaId], references: [id])
  movimiento Movimiento? @relation(fields: [movimientoId], references: [id])
  usuario    Usuario?    @relation(fields: [usuarioId], references: [id])

  @@index([fecha])
  @@map("egreso")
}

// =====================================================================
// PERSONAL / NÓMINA (req. 6)
// =====================================================================

model Empleado {
  id           Int       @id @default(autoincrement())
  nombres      String    @db.VarChar(100)
  apellidos    String    @db.VarChar(100)
  ci           String?   @unique @db.VarChar(20)
  cargo        String    @db.VarChar(100)
  salarioBase  Decimal   @map("salario_base") @db.Decimal(12, 2)
  fechaIngreso DateTime  @map("fecha_ingreso") @db.Date
  fechaSalida  DateTime? @map("fecha_salida") @db.Date
  activo       Boolean   @default(true)

  anticipos AnticipoEmpleado[]
  planillas Planilla[]

  @@map("empleado")
}

model AnticipoEmpleado {
  id          Int      @id @default(autoincrement())
  empleadoId  Int      @map("empleado_id")
  fecha       DateTime @db.Date
  monto       Decimal  @db.Decimal(12, 2)
  descontado  Boolean  @default(false)
  planillaId  Int?     @map("planilla_id")
  observacion String?  @db.VarChar(255)

  empleado Empleado  @relation(fields: [empleadoId], references: [id])
  planilla Planilla? @relation(fields: [planillaId], references: [id])

  @@map("anticipo_empleado")
}

/// Liquidación mensual por empleado.
model Planilla {
  id              Int            @id @default(autoincrement())
  empleadoId      Int            @map("empleado_id")
  cuentaId        Int?           @map("cuenta_id")
  movimientoId    Int?           @unique @map("movimiento_id")
  anio            Int
  mes             Int
  salarioBase     Decimal        @map("salario_base") @db.Decimal(12, 2)
  totalBonos      Decimal        @default(0) @map("total_bonos") @db.Decimal(12, 2)
  totalDescuentos Decimal        @default(0) @map("total_descuentos") @db.Decimal(12, 2)
  totalAnticipos  Decimal        @default(0) @map("total_anticipos") @db.Decimal(12, 2)
  neto            Decimal        @db.Decimal(12, 2)
  fechaPago       DateTime?      @map("fecha_pago") @db.Date
  estado          EstadoPlanilla @default(BORRADOR)
  usuarioId       Int?           @map("usuario_id")

  empleado             Empleado           @relation(fields: [empleadoId], references: [id])
  cuenta               Cuenta?            @relation(fields: [cuentaId], references: [id])
  movimiento           Movimiento?        @relation(fields: [movimientoId], references: [id])
  usuario              Usuario?           @relation(fields: [usuarioId], references: [id])
  detalles             PlanillaDetalle[]
  anticiposDescontados AnticipoEmpleado[]

  @@unique([empleadoId, anio, mes])
  @@map("planilla")
}

model PlanillaDetalle {
  id         Int                  @id @default(autoincrement())
  planillaId Int                  @map("planilla_id")
  tipo       TipoConceptoPlanilla
  concepto   String               @db.VarChar(150)
  monto      Decimal              @db.Decimal(12, 2)

  planilla Planilla @relation(fields: [planillaId], references: [id], onDelete: Cascade)

  @@map("planilla_detalle")
}

// =====================================================================
// CONTABILIDAD (req. 4 y 5): plan de cuentas y asientos de partida doble
// =====================================================================

/// Plan de cuentas jerárquico. Solo las cuentas "imputables" (hoja) reciben movimientos.
model CuentaContable {
  id         Int                @id @default(autoincrement())
  codigo     String             @unique @db.VarChar(20)
  nombre     String             @db.VarChar(120)
  tipo       TipoCuentaContable
  naturaleza NaturalezaCuenta
  nivel      Int                @default(1)
  imputable  Boolean            @default(true)
  activa     Boolean            @default(true)
  padreId    Int?               @map("padre_id")

  padre      CuentaContable?  @relation("JerarquiaCuentas", fields: [padreId], references: [id])
  hijas      CuentaContable[] @relation("JerarquiaCuentas")
  detalles   AsientoDetalle[]
  cuentas    Cuenta[]
  categorias Categoria[]

  @@index([tipo])
  @@map("cuenta_contable")
}

/// Asiento del libro diario. Siempre cuadrado: total_debe = total_haber.
model Asiento {
  id         Int           @id @default(autoincrement())
  fecha      DateTime      @db.Date
  glosa      String        @db.VarChar(255)
  origenTipo OrigenAsiento @map("origen_tipo")
  origenId   Int?          @map("origen_id")
  totalDebe  Decimal       @map("total_debe") @db.Decimal(12, 2)
  totalHaber Decimal       @map("total_haber") @db.Decimal(12, 2)
  estado     EstadoAsiento @default(REGISTRADO)
  usuarioId  Int?          @map("usuario_id")
  creadoEn   DateTime      @default(now()) @map("creado_en")

  usuario  Usuario?         @relation(fields: [usuarioId], references: [id])
  detalles AsientoDetalle[]

  @@index([fecha])
  @@index([origenTipo, origenId])
  @@map("asiento")
}

model AsientoDetalle {
  id               Int     @id @default(autoincrement())
  asientoId        Int     @map("asiento_id")
  cuentaContableId Int     @map("cuenta_contable_id")
  debe             Decimal @default(0) @db.Decimal(12, 2)
  haber            Decimal @default(0) @db.Decimal(12, 2)
  descripcion      String? @db.VarChar(255)

  asiento        Asiento        @relation(fields: [asientoId], references: [id], onDelete: Cascade)
  cuentaContable CuentaContable @relation(fields: [cuentaContableId], references: [id])

  @@index([cuentaContableId])
  @@map("asiento_detalle")
}
